--- a/website/src/components/Parts/styles.module.css
+++ b/website/src/components/Parts/styles.module.css
@@ -25,7 +25,7 @@
 	font-family: "Rokkitt";
 }
 
-.button {
+.cta {
 	background: #0086bf44;
 	border: 1px solid #ace;
 	border-radius: .5rem;
