--- a/website/src/components/Training/styles.module.css
+++ b/website/src/components/Training/styles.module.css
@@ -50,7 +50,7 @@ html[data-theme=dark] .innerAside {
 }
 
 
-.button {
+.cta {
 	background: #0086bf44;
 	border: 1px solid #ace;
 	border-radius: .5rem;
